# traductorqca

./: README.md  pyproject.toml
tests/: test_tradutorsq.py
traductorsq/: __main__.py
