[tool.poetry]
name = "traductorsq"
version = "0.0.0"
description = "Traductor de palabras"
authors = ["Santiago Quiñones-Cuenca <lsquinones@gmail.com>"]
keywords = ["traductor"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/PythonBasico-AA2021/traductorqca"
repository = "https://github.com/PythonBasico-AA2021/traductorqca"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
translate = "^3.5.0"
click = "^8.0.1"

[tool.poetry.scripts]
traductorsq = 'traductorsq.__main__:main'

[tool.poetry.dev-dependencies]
pytest = "^5.2"
twine = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
